@startuml

title __YOLOV2_TRAFFIC_SIGNS's Class Diagram__\n

  namespace com.example.yolov2_traffic_signs {
    class com.example.yolov2_traffic_signs.App {
        # attachBaseContext()
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    class com.example.yolov2_traffic_signs.MainActivity {
        ~ intentLocation : Intent
        - CLASS_NUMBER : int
        - GRID_SIZE : int
        - IMAGE_MEAN : int
        - IMAGE_STD : float
        - INPUT_NAME : String
        - INPUT_SIZE : int
        - MODEL_NAME : String
        - NUM_OF_BBOX : int
        - OUTPUT_NAME : String
        - PIXEL_DEPTH : int
        {static} - TAG : String
        - THRESHOLD : float
        - camera : CameraView
        - currentLocation : Location
        - detectionText : String
        - inferenceInterface : TensorFlowInferenceInterface
        - labels : List<String>
        - serviceConnectionLocation : ServiceConnection
        - switchToMaps : Button
        - txtCurrentDetection : TextView
        - txtCurrentLocation : TextView
        # onCreate()
        - classifyImage()
        - degreesToFirebaseRotation()
        - getClassess()
        - getImageFromFrame()
        - getOutputSize()
        - getTopDetections()
        - listenToButton()
        - processBitmap()
        - processFrame()
        - readLabels()
    }
  }
  

  namespace com.example.yolov2_traffic_signs {
    class com.example.yolov2_traffic_signs.MapsActivity {
        {static} - TAG : String
        - mMap : GoogleMap
        - signs : List<TrafficSigns>
        - switchToCamera : Button
        + onMapReady()
        + synchronizeData()
        # onCreate()
        - listenToButton()
        - placeMarkersOnMap()
    }
  }
  

  com.example.yolov2_traffic_signs.App -up-|> android.app.Application
  com.example.yolov2_traffic_signs.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.yolov2_traffic_signs.MainActivity o-- com.example.yolov2_traffic_signs.services.LocationService : locationService
  com.example.yolov2_traffic_signs.MapsActivity .up.|> com.google.android.gms.maps.OnMapReadyCallback
  com.example.yolov2_traffic_signs.MapsActivity -up-|> androidx.fragment.app.FragmentActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
